Add notification system, remove redoc
